[package]
name = "sd-202103-intro-wasm"
version = "0.1.0"
authors = ["kondoumh <kondoumh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
photon-rs = "0.1.0"
rand = { version = "0.8.0" }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]
